--- a/mobile.css
+++ b/mobile.css
@@ -1,8 +1,22 @@
 *{border:0;padding: 0;box-sizing: border-box;}
 
-html{font-size:62.5%;background-color:#f0f2f5;max-width: 700px;margin-left: auto;margin-right: auto;
+html{font-size:62.5%;background-color:#f0f2f5;max-width: 820px;margin-left: auto;margin-right: auto; 
 
 }
+
+a{
+    text-decoration:none;
+}
+hr{
+    width:90%;
+    margin-left: auto;
+    margin-right:auto;
+    background-color: gray; 
+    margin-bottom:15px;
+    margin-top: -5px;
+    padding:0.05px;
+}
+
 
 header{
     text-align:center;
@@ -11,25 +25,26 @@ header{
 }
 header figure img{
 
-    width: 200px;
-    height: 70px;
+    width: 180px;
+    height: 60px;
     margin-top: 20px;
 }
 
 header h2{
     font-family:  Helvetica, Arial, sans-serif;
-font-size:2.4rem;
+    margin-top: -5px;
+font-size:2.1rem;
 font-weight:normal;
 }
 header h3{
     font-family: Helvetica, Arial, sans-serif;
     color:#606770;
-    font-size:1.5rem;
+    font-size:1.2rem;
     font-weight:normal;
 }
 
 .main_section_conatiner{
-    margin-top: 50px;
+    margin-top: 30px;
 }
 
 .main_section_conatiner{
@@ -42,20 +57,24 @@ header h3{
     
 }
 
-
-
 .container_foto2{
     background-color: #f5f6f7;
 }
+
+.container_foto1 h2{color:#4b4f56;}
+.container_foto2 h2{color:#1877f2;}
 .container_foto1 h2, 
 .container_foto2 h2{
     text-align: center;
-    
+    font-weight:400;
     height: 40px;
     
     padding-top: 10px;
     
-    margin: 0;
+    margin-top: -2px;
+    margin-bottom:0;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
     background-color: #fff;
 }
 
@@ -65,24 +84,103 @@ header h3{
 .container_foto1, .container_foto2{
     text-align: center;
     border:1px solid #eaecef;
-    border-radius: 8px;
+    
 }
 
-.container_foto1:hover, .container_foto2:hover{box-shadow: 0 0 6px 4px #cccfd3;
-
-}
-
+.container_foto1:hover, .container_foto2:hover{box-shadow: 0 0 4px 1px #d7d8db;}
+.container_foto1 img:hover{box-shadow: 0 0 4px 2px #d7d8db;}
 
 .container_foto1 img {
-    border-radius: 4px;
-    width: 105px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    width: 100%;
     height: 100px;
 }
 
 .container_foto2 img{
-    
-    width: 50px;
-    padding-top: 25px;
-    padding-bottom: 25px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    width: 30px;
+    padding-top: 35px;
+    padding-bottom: 35px;
 }
 
+.main_section_container--inputs{
+    display:grid;
+    grid-template-rows: 1fr 1fr  1fr  1fr 1fr;
+    align-items: center;
+    width: 295px;
+    height:285px;
+    margin-top: 25px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top:10px;
+    padding-bottom:10px;
+    border-radius: 8px;
+    background-color: #fff;
+    
+}
+
+.label_correo_electronico, .label_contraseña, .p_olvidaste-contraseña,.label_iniciar_sesion, .label_crear-cuenta{
+    text-align:center;
+}
+
+.label_correo_electronico,.label_contraseña{
+    width:270px;
+    height:40px;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid #eaecef;
+    border-radius:5px;
+    padding-top: 12px;
+}
+.label_correo_electronico input,.label_contraseña input{
+    width:260px;
+    
+    outline: none;
+    
+}
+.label_iniciar_sesion input{
+    width:270px;
+    height:40px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 1.4rem;
+    font-weight: bold;
+    border-radius: 8px;
+    color:white;
+    background-color:#166fe5;
+}
+.p_olvidaste-contraseña a{
+    color:#1877f2;
+    cursor:pointer;
+    font-size:1.4rem;
+    font-weight: 500;
+}
+.label_crear-cuenta input{
+    width:170px;
+    height:40px;
+    margin-left: auto;
+    margin-right: auto;
+    cursor:pointer;
+    font-size: 1.4rem;
+    font-weight: bold;
+    border-radius: 8px;
+    color:white;
+    background-color:#42b72a;
+}
+
+
+
+@media(min-width:768px) {
+    main{
+        display:inline-flex;
+        gap: 150px;
+
+
+    }
+
+    .main_section_conatiner{
+        align-items:baseline;
+    }
+}
