--- a/mobile.css
+++ b/mobile.css
@@ -1,6 +1,6 @@
 *{border:0;padding: 0;box-sizing: border-box;}
 
-html{font-size:62.5%;background-color:#f0f2f5;max-width: 820px;margin-left: auto;margin-right: auto; 
+html{font-size:62.5%;background-color:#f0f2f5;max-width: 800px;margin-left: auto;margin-right: auto; 
 
 }
 
@@ -25,11 +25,12 @@ header{
     margin-top: -25px;
     line-height:.9rem;
 }
-header figure img{
+header img{
 
-    width: 180px;
+    width: 250px;
     height: 60px;
     margin-top: 20px;
+    margin-bottom: 10px;
 }
 
 header h2{
@@ -192,6 +193,7 @@ header h3{
 /*footer*/
 .footer_principal{
     width: 100%;
+    max-width: 1000px;
     height: 100px;
     display:flex;
     justify-content:center;
@@ -207,7 +209,7 @@ header h3{
 }
 .section_idiomas a,.section_opciones a{
     padding:7px;
-    
+    font-size: 1rem;
     line-height:1.9rem;
     color: #8a8d91;
 }
@@ -231,16 +233,3 @@ header h3{
 }
 
 
-
-@media(min-width:768px) {
-    .container_mediaquerie{
-        display:inline-flex;
-        gap: 150px;
-
-
-    }
-
-    .main_section_conatiner{
-        align-items:baseline;
-    }
-}
