--- a/mobile.css
+++ b/mobile.css
@@ -80,6 +80,7 @@ header h3{
     margin-bottom:0;
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
+    font-size: 1.4rem;
     background-color: #fff;
 }
 
